# OpticalMusicRecognition

./: .gitignore  CMakeLists.txt  README.md
include/: audio_gen.h  file_writer.h  note_detection.h  preprocessing.h  staff_detection.h
output/: detected_notes.txt
src/: audio_gen.cpp  camera_input.cpp  file_writer.cpp  note_detection.cpp  preprocessing.cpp  staff_detection.cpp
